{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 51,
  "lineage": "2a08ae34-4f61-b331-cbf7-db7393d1d10c",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "5000"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-05-12T05:08:44.480-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/balmy-virtue-313511/global/firewalls/flask-app-firewall",
            "name": "flask-app-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/balmy-virtue-313511/global/networks/terraform-network",
            "priority": 1000,
            "project": "balmy-virtue-313511",
            "self_link": "https://www.googleapis.com/compute/v1/projects/balmy-virtue-313511/global/firewalls/flask-app-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "global_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "smoketest",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20210510",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/balmy-virtue-313511/zones/europe-west3-a/disks/smoketest-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/balmy-virtue-313511/zones/europe-west3-a/instances/smoketest-vm",
            "instance_id": "8486737384450717558",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDGbXafZoOmm/9WV3Tu7fpuC3YzGAMSFnYZ4SVIjJBL6FP5Kcd3WYJpVjK0HSzFkAew3gpXQk7bqKR3YD6+xsR3F5g+TBx6Q4KwxWq03CW4m5lxUja/iqQrX1zmwgi6xcK9oTytXdHDk2R5gGTeT+yItiDZuxrXWU61wLQvDCRFR161wz3YBknsuw0Xx038P+cV/0Wd7A1XS2PK+1svSvPZy/anIJSTrVIH42Fv7qvbpdV8N7sWcqh/Ac65RRShEG1Jv1pYiX1G14HO5Eb+rApYAD08J4x5B1DnWlzo9PVmcX7huV1seQd+OdCteAru6AXez2hwJzxCKu8333eyaQrRFCGyoOT6ZY134aTOTzLeT0AW4uvUMl2bXHjeShQsmg2NG6W6ElhuUioM1+drASPd+MyMiXlzrc4MgnAuga6pqx [...]
            },
            "metadata_fingerprint": "vI5KoTJW1wI=",
            "name": "smoketest-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.89.212.192",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/balmy-virtue-313511/global/networks/terraform-network",
                "network_ip": "10.156.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/balmy-virtue-313511/regions/europe-west3/subnetworks/terraform-network",
                "subnetwork_project": "balmy-virtue-313511"
              }
            ],
            "project": "balmy-virtue-313511",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/balmy-virtue-313511/zones/europe-west3-a/instances/smoketest-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west3-a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "webservereu",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20210510",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/balmy-virtue-313511/zones/europe-west3-a/disks/testserver-eu"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/balmy-virtue-313511/zones/europe-west3-a/instances/testserver-eu",
            "instance_id": "3770251252013093002",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDGbXafZoOmm/9WV3Tu7fpuC3YzGAMSFnYZ4SVIjJBL6FP5Kcd3WYJpVjK0HSzFkAew3gpXQk7bqKR3YD6+xsR3F5g+TBx6Q4KwxWq03CW4m5lxUja/iqQrX1zmwgi6xcK9oTytXdHDk2R5gGTeT+yItiDZuxrXWU61wLQvDCRFR161wz3YBknsuw0Xx038P+cV/0Wd7A1XS2PK+1svSvPZy/anIJSTrVIH42Fv7qvbpdV8N7sWcqh/Ac65RRShEG1Jv1pYiX1G14HO5Eb+rApYAD08J4x5B1DnWlzo9PVmcX7huV1seQd+OdCteAru6AXez2hwJzxCKu8333eyaQrRFCGyoOT6ZY134aTOTzLeT0AW4uvUMl2bXHjeShQsmg2NG6W6ElhuUioM1+drASPd+MyMiXlzrc4MgnAuga6pqx [...]
            },
            "metadata_fingerprint": "vI5KoTJW1wI=",
            "name": "testserver-eu",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.246.250.32",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/balmy-virtue-313511/global/networks/terraform-network",
                "network_ip": "10.156.0.7",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/balmy-virtue-313511/regions/europe-west3/subnetworks/terraform-network",
                "subnetwork_project": "balmy-virtue-313511"
              }
            ],
            "project": "balmy-virtue-313511",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/balmy-virtue-313511/zones/europe-west3-a/instances/testserver-eu",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west3-a"
          },
          "dependencies": [
            "google_sql_database_instance.mastereu",
            "random_password.mysql_password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "webserverus",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/balmy-virtue-313511/global/networks/terraform-network",
            "name": "terraform-network",
            "project": "balmy-virtue-313511",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/balmy-virtue-313511/global/networks/terraform-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "target_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    }
  ]
}